[gd_scene load_steps=6 format=2]

[ext_resource path="res://Hero/Emotion_Sign.gd" type="Script" id=1]
[ext_resource path="res://Hero/Emotion_signs.png" type="Texture" id=2]
[ext_resource path="res://Shaders/Emotion_Squish.gdshader" type="Shader" id=3]

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 3 )
shader_param/sprite_size = Vector2( 2, 2 )
shader_param/squash_amount = 3.0
shader_param/speed = 10.0

[sub_resource type="Animation" id=1]
resource_name = "Wiggle"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 10.0, 0.0, -10.0, 0.0 ]
}

[node name="Emotion_Sign" type="Sprite" groups=["No_Flash"]]
material = SubResource( 3 )
position = Vector2( 3.2, -4.8 )
rotation = -0.159495
texture = ExtResource( 2 )
hframes = 3
script = ExtResource( 1 )

[node name="Emotion_Animation" type="AnimationPlayer" parent="."]
playback_speed = 1.5
anims/Wiggle = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
